--- a/styles/globals.css
+++ b/styles/globals.css
@@ -797,14 +797,11 @@ li.list-item.time::before{
   content:"⌚ " ;
 }
 
-li.list-item.changes::before{
-  content: "📈 ";
-}
 
 li span.c-blue{
   color: aqua
 }
 
-li.hover:hover{
-  background-color: rgba(25 47 112 / 0.95);
+li.list-item:hover::before{
+  content: "✅ ";
 }
